# myproject

./: .gitignore  pyproject.toml  test.ipynb
src/mypackage/: test.py
